# terraform-aws-lambda

./: .gitignore  Dockerfile  README.md  pyproject.toml  roles.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yaml  destroy.yaml
deploy_lambda/: deploy_lambda_manually_terraform.sh  destroy_lambda_manually_terraform.sh
invoke_lambda/: event.json  invoke_lambda_locally.py  invoke_lambda_remote.py
src/: app.py
terraform/: main.tf
test/src/: test_app.py
