[tool.poetry]
name = "server-explorer"
version = "1.0.0"
description = ""
authors = [
    "Yerhard Lalangui <yera.lalangui@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.10"
boto3 = "1.34.*"
prettytable = "3.9.*"


[tool.poetry.dev-dependencies]
flake8 = "*"
autopep8 = "*"
python-dotenv = "*"
pytest = "*"
pytest-cov = "*"
pytest-freezegun = "*"
black = "*"
isort = "*"

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
profile = "black"
py_version = 310
line_length = 120
