[tool.poetry]
name = "server-explorer"
version = "1.0.0"
description = ""
authors = [
    "Yerhard Lalangui <yera.lalangui@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.10"
boto3 = "1.34.*"
prettytable = "3.9.*"


[tool.poetry.dev-dependencies]
pytest = "8.0.*"
moto = "5.0.*"


[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
profile = "black"
py_version = 310
line_length = 120
